--- a/stylesheets/modules/logo.css
+++ b/stylesheets/modules/logo.css
@@ -17,8 +17,6 @@
 }
 
 .copyright {
-  margin-top: 1em;
-  margin-bottom: 1em;
   text-align: center;
   font-style: normal;
 }
